@@ -209,7 +209,7 @@ class CardAppearanceDlg(QtGui.QDialog, Ui_CardAppearanceDlg,
         fact = Fact(fact_data)
         cards = card_type.create_sister_cards(fact)        
         tag_text = ""
-        dlg = PreviewCardsDlg(cards, tag_text, self)
+        dlg = PreviewCardsDlg(self.component_manager, cards, tag_text, self)
         dlg.exec_()
         
     def defaults(self):
